--- a/assignment/assignment1/css/main.css
+++ b/assignment/assignment1/css/main.css
@@ -6,6 +6,51 @@ body {
     padding: 0;
     overflow: hidden;
     font-family: helvetica, arial, sans-serif;
+  }
+
+div button {
+  position:relative;
+  float: right;
+  padding: 5px;
+  background-color: black;
+  color: white;
+  cursor:pointer;
+  box-sizing: border-box;
+}
+
+#stringinput{
+  width: 280px;
+}
+
+p {
+  font-size: 20px;
+}
+
+.school{
+  width: 280px;
+  background-color: #f0f0f0;
+  vertical-align: middle;
+  position:relative;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  padding: 15px;
+}
+
+.level{
+  margin-bottom:0em;
+  color: grey;
+  padding-bottom: 5px;
+}
+
+.address{
+  padding: 0;
+  font-size: 16px;
+  line-height: 70%;
+}
+
+.name{
+  font-size: 20px;
+  margin-bottom:0em;
 }
 
 .map {
